# BaseRepository

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
assets/: README.md
data/: sample.csv  sample.json  sample.jsonl
docs/: Makefile  conf.py  example.ipynb  make.bat
notebooks/: 01_use_writer.ipynb  02_use_llms.ipynb  langchain.db
src/: __init__.py
src/base_repo/fileio/: __init__.py
src/base_repo/fileio/dataframe/: readers.py  writers.py
src/base_repo/fileio/image/: writers.py
src/base_repo/fileio/text/: __init__.py  readers.py  writers.py
src/base_repo/llms/: queryllms.py
src/fileio/dataframe/: readers.py  writers.py
src/fileio/image/: readers.py
src/fileio/text/: readers.py  writers.py
src/llms/: queryllm.py
tests/: test_base_repo.py
