[tool.poetry]
name = "base_repo"
version = "0.1.0"
description = "A base repository for projects at MARVL"
authors = ["Alejandro Lozano"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
